<resources>
    <string name="app_name">TaskTimer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="menuTItle_addTask">Add Task</string>
    <string name="menuTitle_showDurations">Durations Report</string>
    <string name="menuTitle_settings">Settings</string>
    <string name="menuTitle_showAbout">About TaskTimer</string>
    <string name="menuTitle_generate">Generate data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button to edit a tasks details</string>
    <string name="delete_button_description">Button to delete a task</string>
    <string name="addedit_name_hint">Task name required</string>
    <string name="addedit_description_hint">Task description (optional)</string>
    <string name="addedit_sort_hint">Order : sorts low to high</string>
    <string name="addedit_save_text">Save</string>
    <string name="instructions_heading">Instructions</string>1`
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list.Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task %1$d: %2$s.</string>
    <string name="cancelEditDiag_message">You have unsaved changes. Do you want to abandon your changes, or continue editing?</string>
    <string name="cancelEditDiag_positive_caption">Abandon Changes</string>
    <string name="cancelEditDiag_negative_caption">Continue editing</string>
    <string name="about_copyright">Copyright ©2020</string>
    <string name="about_weblink_v21">Check my other projects www.kvntzn.github.io</string>
    <string name="about_weblink">Check my other projects</string>
    <string name="about_url_error">No browser application found, cannot visit world wide web</string>
    <string name="about_url"><u>"https://www.kvntzn.github.io"</u></string>
    <string name="about_email">Email me kevintuazon45@gmail.com</string>
</resources>
